# UEAdvancedMaterialEditingLibrary

./: .gitignore  AdvancedMaterialEditingLibrary.uplugin  LICENSE  README.md  RebuildPlugin.bat  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
Builds/UE5.5/UEAdvancedMaterialEditingLibrary/: AdvancedMaterialEditingLibrary.uplugin
Content/Examples/: MI_TargetMaterial.uasset  MLB_MaterialLayerBlend.uasset  ML_MaterialLayer.uasset  ML_MaterialLayer_Red.uasset  M_LayeredMaterial.uasset
Content/Python/: layered_material_library.py
Source/AdvancedMaterialEditingLibrary/Private/: LayeredMaterialLibrary.cpp
Source/AdvancedMaterialEditingLibrary/Public/: LayeredMaterialLibrary.h
docs/: index.md
docs/api/: layered_material_library.md
